--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main>
+        <header>
         <nav>
              <span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="102" height="22" viewBox="0 0 102 22">
@@ -28,7 +29,28 @@
                     <a class="button" href="">دانلود تپسی</a>
             </ul>
         </nav>
-        
+        </header>
+        <div class="hero">
+            <img src="./images/IMG_20241215_165311.jpg" alt="">
+            <div class="phone">
+                <img src="./images/mockup-phone.webp" alt="">
+            </div>
+            <div class="applications">
+                <h1>تپسی</h1>
+                <h2>اپلیکیشن درخواست خودرو و پیک</h2>
+                <div class="first-box">
+                <div class="first"><p>دانلود اپلیکیشن مسافران</p></div>
+                <div class="second"><p>وب اپلیکیشن مسافران</p></div>
+                </div>
+                <div class="secend-box">
+                    <div class="first"><p>ثبت‌نام راننده خودرو</p></div>
+                    <div class="secend"><p>ثبت‌نام راننده موتور</p></div>
+                </div>
+                <div class="third-box">
+                    <p>دانلود اپلیکیشن رانندگان</p>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
